# model_guided_research

./: .gitignore  AGENTS.md  README.md  cli.py  geometry_profile.py  pyproject.toml  ultrametric_worlds_and_p_adic_computation.py
.beads/: .gitignore  issues.jsonl
.github/workflows/: e2e-nightly.yml
artifacts/: README.md
artifacts/adjudications/2026-06-10-initial/: report.md  verdicts.json
artifacts/adjudications/2026-06-12/: report.md  verdicts.json
artifacts/adjudications/8h0e/: campaign.md
artifacts/adjudications/9qk3/: campaign.md  report.md  verdicts.json
artifacts/adjudications/e1/: campaign.md  report.md  verdicts.json
artifacts/adjudications/hqwi/: campaign.md  report.md  verdicts.json
artifacts/adjudications/pilot1/: campaign.md  report.md  verdicts.json
artifacts/adjudications/pilot1-civ2/: report.md  supersession.md  verdicts.json
artifacts/adjudications/sm47/: campaign.md  report.md  verdicts.json
artifacts/campaigns/9qk3/arith-tropical-anneal-s0/: summary.json
artifacts/campaigns/9qk3/arith-tropical-anneal-s1/: summary.json
artifacts/campaigns/9qk3/arith-tropical-anneal-s2/: summary.json
artifacts/campaigns/9qk3/arith-tropical-b1-s0/: summary.json
artifacts/campaigns/9qk3/arith-tropical-b1-s1/: summary.json
artifacts/campaigns/9qk3/arith-tropical-b1-s2/: summary.json
artifacts/campaigns/e2-dyck/dyck-braid-s30/: summary.json
configs/: README.md  fair_comparison.json
docs/: activation_checkpointing.md  campaign_preregistration_template.md  ci_lite.md  config_parity.md  config_parity_suite.md  data_parity.md  dataloader_tuning.md  dataset_licenses.md  enterprise_research_guide_ua.md  feature_ablation_plan.md  flops_validation.md  integration_matrix.md  microbench_ops.md  new_mechanism_checklist.md  research_loop.md  rich_styling_audit.md  rust_kernel_options.md  triton_hotspot_plan.md  ubs_usage.md
hypotheses/: registry.yaml  theorems.yaml
markdown_documentation/: clifford_algebra_and_geometric_attention.md  gromov_product_and_the_ultrametric_hyperbolic_bridge.md  hyperbolic_geometry_and_negative_curvature_attention.md  integrable_attention_rmatrix.md  maslov_dequantization_annealing.md  nonstandard_analysis_width_scaling.md  padic_precision.md  symplectic_transformer.md  the_valuation_dictionary.md  tropical_geometry_and_idempotent_algebra.md
nanochat/: braid_attention_torch.py  checkpoint_manager.py  dataloader.py  diagnostics_data.py  engine.py  fractal_attention_torch.py  gauge_block_torch.py  gpt.py  model_utils.py  octonion_attention_torch.py  ordinal_scheduler.py  parameterization.py  quaternion_attention_torch.py  report.py  reversible_block_torch.py  simplicial_attention_torch.py  surreal_torch.py  train.py  tropical_attention_torch.py  ultrametric_attention_torch.py
scripts/: ci_lite.sh  e2e_pipeline.py  microbench_ops.py  run_campaign.py
tests/: test_adjudicate.py  test_algebraic_properties.py  test_attention_core_goldens.py  test_bench.py  test_checkpoint_resume.py  test_cross_framework_parity.py  test_demos.py  test_diagnostics_data.py  test_estimate_flops.py  test_eval_tasks.py  test_geometry_profile.py  test_hypotheses_registry.py  test_mathematical_properties.py  test_parameterization.py  test_report.py  test_sample.py  test_theorem_registry.py
tests/fixtures/: diagnostics_generator_hashes.json  eval_tasks_golden.json
tests/fixtures/attention_goldens/: braid.json  fractal.json  gauge.json  octonion.json  quaternion.json  reversible.json  simplicial.json  standard.json  surreal.json  tropical.json  ultrametric.json
(+475 files in other folders)
